# signum

./: .gitignore  .pre-commit-config.yaml  Makefile  package-lock.json  package.json  pyproject.toml  quasar_answers.json  requirements-dev.txt  requirements.txt  scaffold_quasar.mjs
frontend/: package-lock.json  package.json  quasar.config.js
frontend/src/layouts/: GlobalLayout.vue
frontend/src/pages/: ExportsPage.vue  HomePage.vue  PreviewPage.vue  RunsPage.vue
frontend/src/router/: routes.js
frontend/src/styles/: NeonTheme.css
infra/: .env  .env.example  docker-compose.yml
libs/aiona/: __init__.py  generator.py
libs/core/: __init__.py  aegis.py  models.py
libs/core/schemas/: manifest.schema.json  project_input.schema.json
libs/docgen/: __init__.py  generator.py
libs/docgen/templates/: HLD.md.j2  LLD.md.j2  SRS.md.j2
libs/gantt/: __init__.py  generator.py
libs/uml/: __init__.py  generator.py  models.py
services/api-gateway/: Dockerfile  main.py  requirements.txt
services/export_manager/: __init__.py  _utils.py  api.py  cli.py  github.py  nexus_ops.py  pdf.py  trello.py
services/lynx/: cli.py  plan.py
services/orchestrator/: Dockerfile  main.py  requirements.txt
services/orchestrator/actors/: __init__.py  aegis.py
tests/: requirements.txt  test_aegis.py  test_aegis_actor.py  test_aiona.py  test_core.py
