[tool.poetry]
name = "signum"
version = "0.1.0"
description = "Signum monorepo"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pydantic = ">=2,<3"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.6.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "frontend",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = false
disallow_untyped_defs = false
no_implicit_optional = false
exclude = [
    "frontend",
]
packages = ["libs"]
explicit_package_bases = true
